# Quadtrix.cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.py  quadtrix_training_plots.ipynb  run.md
CUDA/: main.py
backend/: .env.example  config.py  inference.py  models.py  requirements.txt
backend/router/: chat.py  health.py
config/: config.h
engine/: main.py
engine/logs/: run_20260430_192930.txt  run_20260503_205333.txt
frontend/: index.html  sw.js
frontend/src/api/: chat.ts  client.ts  health.ts  sessions.ts
gpu/: dataloader.h  model.h
iGPU/: main.py
include/: backward.h  feedforward.h  tensor.h
model/: Cmakelists.txt  export_tokenizer.py
scripts/: build_torch.ps1
src/: torch_main.cpp
